<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainUser"
            type="com.candlestickschart.wayanadboothpresident.User" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Screen3">
        <include layout="@layout/header"
            android:id="@+id/top"
            bind:username="@{mainUser}"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3.1"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urban"
                    android:id="@+id/rbtn1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/town"
                    android:id="@+id/rbtn2"
                    android:layout_marginLeft="20dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rural"
                    android:id="@+id/rbtn3"
                    android:layout_marginLeft="20dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3.2"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:id="@+id/rbtn4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Medium"
                    android:id="@+id/rbtn5"
                    android:layout_marginLeft="20dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Low"
                    android:id="@+id/rbtn6"
                    android:layout_marginLeft="20dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3.3"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agri"
                    android:id="@+id/rbtn7"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/industry"
                    android:id="@+id/rbtn8"
                    android:layout_marginLeft="20dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:id="@+id/rbtn9"
                    android:layout_marginLeft="20dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130sp"
            android:background="@drawable/edit_bg"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/maincrop"
                android:textColor="@color/black"
                android:gravity="top"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/maincrop"
                />
        </LinearLayout>
        <include layout="@layout/bottom"/>
    </LinearLayout>
</layout>
