<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainUser"
            type="com.candlestickschart.wayanadboothpresident.User" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoUpdate">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/header"
                    bind:username="@{mainUser}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:text="@string/infoUpdate"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/festival"
                    android:text="@string/festival"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:background="@drawable/newsample"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/wedding"
                    android:text="@string/wedding"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/newsample"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/birth"
                    android:text="@string/childbirth"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:background="@drawable/newsample"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/death"
                    android:text="@string/death"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/newsample"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/achievement"
                    android:text="@string/achievment"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:background="@drawable/newsample"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/letter"
                    android:text="@string/letter"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/newsample"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>



            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</layout>
